--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
+    "xlsx": "^0.18.5",
+    "pdfjs-dist": "^2.16.105",
+    "bcryptjs": "^2.4.3",
     "zod": "3.25.67"
   },
   "devDependencies": {
